修正mysql实现。 简化access实现及优化。 修复一些BUG。

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "ext-sqlsrv": "*",
         "ext-mysqli": "*",
         "ext-pgsql": "*",
-        "ext-sqlite3": "*"
+        "ext-sqlite3": "*",
+        "ext-iconv": "*"
     },
 	"autoload": {
         "psr-4": {
