--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,10 @@
         }
     ],
     "require": {
-		"php": ">=7.0.0",
-        "ext-com_dotnet": "*",
-        "ext-odbc": "*",
-        "ext-pdo": "*",
-        "ext-sqlsrv": "*",
-        "ext-mysqli": "*",
-        "ext-pgsql": "*",
-        "ext-sqlite3": "*",
-        "ext-iconv": "*"
+		"php": ">=7.0.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.0.0"
     },
 	"autoload": {
         "psr-4": {
