--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
     "require-dev": {
         "phpunit/phpunit": "^8.0.0"
     },
+    "suggest": {
+        "ext-oci8": "*"
+    },
 	"autoload": {
         "psr-4": {
             "fize\\db\\": "src"
