--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,12 @@
         "ext-oci8": "*",
         "ext-odbc": "*",
         "ext-pdo": "*",
+        "ext-pdo_mysql": "*",
+        "ext-pdo_oci": "*",
+        "ext-pdo_odbc": "*",
+        "ext-pdo_pgsql": "*",
+        "ext-pdo_sqlite": "*",
+        "ext-pdo_sqlsrv": "*",
         "ext-pgsql": "*",
         "ext-sqlite3": "*",
         "ext-sqlsrv": "*"
