--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     },
     "suggest": {
         "ext-com_dotnet": "*",
+        "ext-iconv": "*",
         "ext-mysqli": "*",
         "ext-oci8": "*",
         "ext-odbc": "*",
