--- a/composer.json
+++ b/composer.json
@@ -7,31 +7,16 @@
   ],
   "autoload": {
     "psr-4": {
-      "fize\\db\\": "src"
+      "fize\\database\\": "src"
     }
   },
   "description": "一个全功能的，易于扩展的数据库类、ORM类。",
   "license": "MIT",
-  "name": "fize/db",
+  "name": "fize/database",
   "require": {
     "php": ">=7.0.0"
   },
   "require-dev": {
-    "ext-com_dotnet": "*",
-    "ext-iconv": "*",
-    "ext-mysqli": "*",
-    "ext-oci8": "*",
-    "ext-odbc": "*",
-    "ext-pdo": "*",
-    "ext-pdo_mysql": "*",
-    "ext-pdo_oci": "*",
-    "ext-pdo_odbc": "*",
-    "ext-pdo_pgsql": "*",
-    "ext-pdo_sqlite": "*",
-    "ext-pdo_sqlsrv": "*",
-    "ext-pgsql": "*",
-    "ext-sqlite3": "*",
-    "ext-sqlsrv": "*",
     "phpunit/phpunit": "~9.1.0"
   },
   "suggest": {
